# farmer.pytorch

./: .gitignore  Dockerfile  README.md  pyproject.toml  train.py  train_imp.py  train_seg.py
Augmentation/: __init__.py  augmentation_abc.py
GetAnnotation/: __init__.py  get_annotation_abc.py  get_annotation_fn.py
GetDataset/: __init__.py  dataset_abc.py  dataset_fn.py  get_dataset_abc.py
GetOptimization/: get_optimization_abc.py  get_optimization_fn.py
LoadDataset/: __init__.py  load_dataset_abc.py  load_dataset_base.py  load_dataset_fn.py  load_dataset_sgm.py
Train/: __init__.py  train_abc.py
farmer_pytorch/: get_annotation_abc.py  get_dataset_abc.py  get_optimization.py  get_optimization_abc.py
farmer_pytorch/GetAnnotation/: get_annotation_abc.py  get_annotation_fn.py
farmer_pytorch/GetOptimization/: get_optimization_abc.py  get_optimization_fn.py  optimization_fn.py
farmer_pytorch/GetPrediction/: __init__.py  get_prediction_abc.py
farmer_pytorch/logger/: base.py  progress_bar.py
farmer_pytorch/metrics/: seg_metrics.py
farmer_pytorch/readers/: __init__.py  read_annotation.py
quickstart/: README.md  download_segmentation.py  dvc.yaml  pyproject.toml  train_seg.py
quickstart/results/: dice.json  scores.json
quickstart/results/models/: last.pth
quickstart/seg_data/: .gitignore
tests/: README.md  dvc.yaml  pyproject.toml  train_seg.py
tests/result/: dice.json  scores.json
